<resources>
    <string name="app_name">DutchBlitz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_login">CreateLogin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="accountCreate">Create Account</string>
    <string name="loginText">Log-in</string>
    <string name="title_activity_player_list">PlayerListActivity</string>
    <string name="title_activity_player_home">PlayerHomeActivity</string>
    <string name="title_activity_waiting_room">WaitingRoomActivity</string>
    <string name="create_room_text">Create Room</string>
    <string name="chat_text">Chat</string>
    <string name="join_room_text">Join Room</string>
    <string name="observe_text">Observe</string>
    <string name="home_text">Home</string>
    <string name="invite_text">Invite Friend</string>
    <string name="start_text">Start</string>
    <string name="title_activity_create_room_popup">CreateRoomPopup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="invite">invite</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="display_leaderboard">Display Leaderboard</string>
    <string name="send">send</string>


</resources>
