<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WaitingRoomActivity"
    android:background="@color/background_material_dark">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text"
        android:id="@+id/homeButton"
        android:background="@color/secondary"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text"
        android:id="@+id/startButton"
        android:background="@color/secondary"
        android:layout_alignTop="@+id/inviteButton"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_text"
        android:id="@+id/chatButton"
        android:background="@color/secondary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_text"
        android:id="@+id/inviteButton"
        android:background="@color/secondary"
        android:layout_above="@+id/chatButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="TEMP TITLE"
        android:id="@+id/roomName"
        android:layout_below="@+id/homeButton"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentPlayers"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/startButton"
        android:layout_below="@+id/roomName" />


</RelativeLayout>
