<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.PlayerHomeActivity"
    android:background="@color/background_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/usernameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_room_text"
        android:id="@+id/button4"
        android:onClick="createJoinRoomFragment"
        android:background="@color/secondary"
        android:layout_column="9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createRoom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observe_text"
        android:id="@+id/button6"
        android:background="@color/secondary"
        android:layout_column="9"
        android:onClick="createObserveRoomFragment"
        android:layout_below="@+id/createRoom"
        android:layout_alignEnd="@+id/leaderboardButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/leaderboardButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room_text"
        android:id="@+id/createRoom"
        android:background="@color/secondary"
        android:layout_column="9"
        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:onClick="displayCreateFragment" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/usernameText"
        android:layout_above="@+id/createRoom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_leaderboard"
        android:id="@+id/leaderboardButton"
        android:onClick="createLeaderboardActivity"
        android:background="@color/secondary"
        android:layout_column="9"
        android:layout_alignTop="@+id/createRoom"
        android:layout_toEndOf="@+id/usernameText" />

</RelativeLayout>
